feat(order-service): harden saga state transitions and outbox retry flow - add component-level order states (payment/inventory) and terminal DONE status - enforce aggregate status guards to prevent invalid/out-of-order regressions - move timeout selection/cancel checks to component-state predicates - externalize timeout and outbox lease durations to properties - remove outbox attempt tracking and use retry_count with max-attempt failover